<resources>
    <string name="app_name">WDictionary</string>
    <string name="loading">Loading</string>
    <string name="enter_word">Enter word...</string>
    <string name="definitions">Definitions</string>
    <string name="related_words">Related words</string>
    <string name="random_word">Random word</string>
    <string name="search">Search</string>
    <string name="word_limit">Words limit</string>
    <string name="part_of_speech">Part of speech</string>
    <string name="use_canonical">Use canonical</string>
    <string name="relationship_type">Relationship type</string>
    <string name="limit_per_relationship_type">Limit per relationship type</string>
    <string name="has_dictionary_definition">Has dictionary definition</string>
    <string name="min_length">Min length</string>
    <string name="max_length">Max length</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_help">Help</string>
    <string name="menu_about">About</string>
    <string name="menu_exit">Exit</string>
    <string name="toolbar_definitions_for">Definitions:</string>
    <string name="toolbar_related_words_for">Related words:</string>
    <string name="progress_dialog_title">Please wait</string>
    <string name="definitions_search_progress_dialog_content">Getting definitions.</string>
    <string name="related_words_progress_dialog_content_audio">Getting audio.</string>
    <string name="definitions_not_found">Definitions not found for typed word. Check if the word is typed correctly.</string>
    <string name="audio_not_found">Audio not found for selected word.</string>
    <string name="server_error">Error happened while requesting data from server. Please try again.</string>
    <string name="random_word_search_progress_dialog_content">Getting random word.</string>
    <string name="related_words_search_progress_dialog_content">Getting related words.</string>
    <string name="related_words_not_found">Related words not found for typed word. Check if the word is typed correctly</string>
    <string-array name="words_limit_spinner_values">
        <item>1</item>
        <item>3</item>
        <item>5</item>
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>50</item>
    </string-array>
    <string-array name="part_of_speech_keys">
        <item></item>
        <item>noun</item>
        <item>adjective</item>
        <item>verb</item>
        <item>adverb</item>
        <item>pronoun</item>
        <item>preposition</item>
        <item>abbreviation</item>
        <item>article</item>
        <item>auxiliary-verb</item>
        <item>idiom</item>
        <item>imperative</item>
        <item>noun-plural</item>
        <item>noun-posessive</item>
        <item>past-participle</item>
        <item>suffix</item>
        <item>verb-intransitive</item>
        <item>verb-transitive</item>
    </string-array>
    <string-array name="part_of_speech_values">
        <item>All</item>
        <item>Noun</item>
        <item>Adjective</item>
        <item>Verb</item>
        <item>Adverb</item>
        <item>Pronoun</item>
        <item>Preposition</item>
        <item>Abbreviation</item>
        <item>Article</item>
        <item>Auxiliary verb</item>
        <item>Idiom</item>
        <item>Imperative</item>
        <item>Plural noun</item>
        <item>Posessive noun</item>
        <item>Past participle</item>
        <item>Suffix</item>
        <item>Intransitive verb</item>
        <item>Transitive verb</item>
    </string-array>
    <string-array name="relationship_type_keys">
        <item></item>
        <item>synonym</item>
        <item>antonym</item>
        <item>variant</item>
        <item>equivalent</item>
        <item>cross-reference</item>
        <item>related-word</item>
        <item>rhyme</item>
        <item>form</item>
        <item>etymologically-related-term</item>
        <item>hypernym</item>
        <item>hyponym></item>
        <item>inflected-word</item>
        <item>primary</item>
        <item>same-context</item>
        <item>verb-form</item>
        <item>verb-stern</item>
    </string-array>
    <string-array name="relationship_type_values">
        <item>All</item>
        <item>Synonym</item>
        <item>Antonym</item>
        <item>Variant</item>
        <item>Equivalent</item>
        <item>Cross reference</item>
        <item>Related word</item>
        <item>Rhyme</item>
        <item>Form</item>
        <item>Etymologically related term</item>
        <item>Hypernym</item>
        <item>Hyponym</item>
        <item>Inflacted word</item>
        <item>Primary</item>
        <item>Same context</item>
        <item>Verb form</item>
        <item>Verb stern</item>
    </string-array>
    <integer name="default_limit_for_random_word">10</integer>
    <integer name="min_word_length">3</integer>
    <integer name="max_word_length">15</integer>
    <string name="more_than_max">&gt;15</string>
    <string name="search_word_required">Please enter word for search.</string>
    <integer name="related_word_height">220</integer>
    <string name="app_version">Version 0.1</string>
    <string name="app_author">By Jovica Zaric</string>
    <string name="all_rights_reserved_about">(C) Jovica Zaric 2016</string>
    <integer name="loading_simulator_interval">300</integer>
    <integer name="loading_simulator_iteration">9</integer>
    <string name="visit_our_site">Visit our site</string>
    <string name="about_suggestions">If you have any questions or suggestions, send us an email</string>
    <string name="question_suggestion_for_wdictionary">Question or suggestion for WDictionary</string>
    <string name="no_internet_acces">No internet access. Please turn on Wi-Fi or mobile data.</string>
    <string name="enable_internet">Please enable internet access:</string>
    <string name="wifi">Wi-Fi</string>
    <string name="data">Data</string>
    <string name="if_no_internet">With no internet access the application is not working properly.</string>
    <string name="proceed_anyway">Proceed anyway</string>
</resources>
