<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:id="@+id/notification">

        <TextView
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:id="@+id/notication_message"
            android:text="@string/no_internet_acces"
            android:textSize="@dimen/splash_screen_loading"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_below="@id/notification"
        android:id="@+id/enable_message">

        <TextView
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:id="@+id/enable_suggestion"
            android:text="@string/enable_internet"
            android:textSize="@dimen/splash_screen_loading"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_below="@id/enable_message"
        android:id="@+id/buttons">

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true" >

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wifi"
                android:onClick="turnOnWifi"
                android:layout_gravity="right"
                android:layout_weight="1"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/data"
                android:onClick="turnOnMobileData"
                android:layout_gravity="left"
                android:layout_weight="1"/>

        </LinearLayout>

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_below="@id/buttons"
        android:id="@+id/if_no_internet">

        <TextView
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/if_no_internet"
            android:textSize="@dimen/splash_screen_loading"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_below="@id/if_no_internet"
        android:id="@+id/procceed">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/proceed_anyway"
            android:onClick="proceedAnyway"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>

</RelativeLayout>