<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="110dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/app_name"
            android:text="@string/app_name"
            android:textSize="@dimen/splash_screen_app_name"
            android:layout_centerHorizontal="true" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/app_name"
            android:layout_centerHorizontal="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/loading"
                android:text="@string/loading"
                android:textSize="@dimen/splash_screen_loading"
                android:layout_centerHorizontal="true" />

            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:id="@+id/dots"
                android:textSize="@dimen/splash_screen_dots"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/loading"
                />

        </LinearLayout>


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/version"
            android:text="@string/app_version"
            android:textSize="@dimen/splash_screen_loading"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/author"
            android:text="@string/app_author"
            android:textSize="@dimen/splash_screen_loading"
            android:layout_marginRight="15dp" />

    </LinearLayout>


</RelativeLayout>