<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:id="@+id/app">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/app_name"
            android:text="@string/app_name"
            android:textSize="@dimen/splash_screen_app_name"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/app_name"
            android:id="@+id/version"
            android:text="@string/app_version"
            android:textSize="@dimen/splash_screen_loading"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:layout_below="@id/app"
        android:id="@+id/site">

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true" >

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:tint="@color/related_word_icons"
                android:id="@+id/browser"
                android:src="@drawable/ic_browser"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/visit_our_site"
                android:text="@string/visit_our_site"
                android:textSize="@dimen/visit_our_site" />

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_below="@id/site"
        android:id="@+id/suggestions">


        <TextView
            android:layout_width="200dp"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:id="@+id/about_suggestions"
            android:text="@string/about_suggestions"
            android:textSize="@dimen/about_suggestions"
            android:layout_centerHorizontal="true"
            />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:layout_centerHorizontal="true"
            android:tint="@color/related_word_icons"
            android:layout_below="@id/about_suggestions"
            android:id="@+id/email"
            android:src="@drawable/ic_email"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/author"
            android:text="@string/all_rights_reserved_about"
            android:textSize="@dimen/splash_screen_loading"
            android:layout_weight="1"
            android:gravity="right"
            android:layout_marginRight="15dp" />

    </LinearLayout>



</RelativeLayout>